# csgo-hackbase

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/core/: memory.cpp  memory.h  pattern_scan.cpp  pattern_scan.h
src/features/: aimbot.cpp  aimbot.h  bunnyhop.cpp  bunnyhop.h  triggerbot.cpp  triggerbot.h
src/gui/: menu.cpp  menu.h
src/sdk/: entity.cpp  entity.h
src/utils/: math.h
